// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create preview of nodes 1`] = `
<Fragment>
  <ul
    className="previewList"
  >
    <li
      className="previewItem"
      key="0"
    >
      <span>
         
        <span
          className="previewItemValue"
        >
          foo
        </span>
      </span>
    </li>
  </ul>
  <span
    className="previewItemOperator"
  >
     
    was
     
  </span>
  <span
    className="parameterName"
  >
    Executed
  </span>
</Fragment>
`;

exports[`should create preview of selected nodes linked by nor 1`] = `
<Fragment>
  <ul
    className="previewList"
  >
    <li
      className="previewItem"
      key="0"
    >
      <span>
         
        <span
          className="previewItemValue"
        >
          foo
        </span>
        <span
          className="previewItemOperator"
        >
           
          and
           
        </span>
      </span>
    </li>
    <li
      className="previewItem"
      key="1"
    >
      <span>
         
        <span
          className="previewItemValue"
        >
          foo
        </span>
      </span>
    </li>
  </ul>
  <span
    className="previewItemOperator"
  >
     
    were
     
  </span>
  <span
    className="parameterName"
  >
    Not 
    Executed
  </span>
</Fragment>
`;

exports[`should create preview of selected nodes linked by or 1`] = `
<Fragment>
  <ul
    className="previewList"
  >
    <li
      className="previewItem"
      key="0"
    >
      <span>
         
        <span
          className="previewItemValue"
        >
          foo
        </span>
        <span
          className="previewItemOperator"
        >
           
          or
           
        </span>
      </span>
    </li>
    <li
      className="previewItem"
      key="1"
    >
      <span>
         
        <span
          className="previewItemValue"
        >
          foo
        </span>
      </span>
    </li>
  </ul>
  <span
    className="previewItemOperator"
  >
     
    was
     
  </span>
  <span
    className="parameterName"
  >
    Executed
  </span>
</Fragment>
`;
